--- a/html/pandoc.css
+++ b/html/pandoc.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=VT323');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
 body {
 	max-width:60vw;
 	padding:20px;
@@ -8,11 +11,9 @@ body {
 	-ms-word-break:break-all;
 	word-break:break-all;
 	word-break:break-word;
-	-ms-hyphens:auto;
-	-moz-hyphens:auto;
-	-webkit-hyphens:auto;
-	hyphens:auto;
-	font-family:sans-serif
+	font-family: 'Ubuntu', sans-serif;
+	color: #fff;
+	background-color: #000;
 }
 
 h1, h2, h3 {
@@ -22,16 +23,60 @@ h1, h2, h3 {
 
 h2 {
 	color:#c7ae9b;
-	padding-top:20px
+	padding-top:20px;
+	text-align: center !important;
 }
 
 p {
 	line-height:1.6
 }
 
+.outterImg {
+
+	border-radius: 50%;
+	width: 130px;
+	height: 130px;
+	padding-top: 0.5em;
+	background-color:#fff;	
+
+	display: table;
+  	margin: 0 auto;
+}
+
+.innerImg {
+
+	display: table;
+  	margin: 0 auto;
+}
+
 #profile {
-	float:right;
-	margin:0 0 15px 15px
+
+	border-radius: 50%;
+}
+
+.title {
+
+	text-align: center;
+	font-size: 70px;
+	font-family: 'VT323', monospace;
+}
+
+.box {
+
+	width: 75%;
+	height: auto;
+	background-color: #3D3D3D;
+	display: table;
+	margin: 0 auto;
+	padding: 10px;
+	border-radius: 1%;
+  	box-shadow: 0 4px 8px 0 rgba(100, 100, 100, 0.2), 0 6px 20px 0 rgba(100, 100, 100, 0.19);
+  	text-align: center;
+}
+
+.faded {
+
+	opacity: 0;
 }
 
 center {
